# vec-dimension-shift

./: Cargo.toml  README.md
examples/: d2_and_d3.rs  n_dimension_macro_generator.rs
src/: lib.rs
tests/: d2_and_d3.rs  n_dimension_macro_generator.rs
